@@ -224,7 +224,6 @@ public:
 	void	RemoveAllDoors();
 	void	DespawnAllDoors();
 	void	RespawnAllDoors();
-	void	RepopAllDoors();
 	void	RemoveAllTraps();
 	void	RemoveAllObjects();
 	void	RemoveAllLocalities();
@@ -359,6 +358,7 @@ public:
 
 	int16	CreateGroundObject(int32 itemid, float x, float y, float z, float heading, int32 decay_time = 300000);
 	int16	CreateGroundObjectFromModel(const char *model, float x, float y, float z, float heading, int8 type = 0x00, int32 decay_time = 0);
+	int16	CreateDoor(const char *model, float x, float y, float z, float heading, int8 type = 0, int16 size = 100);
 	void	ZoneWho(Client *c, Who_All_Struct* Who);
 	void	UnMarkNPC(int16 ID);
 
