@@ -2560,3 +2560,9 @@ void QuestManager::SendMail(const char *to, const char *from, const char *subjec
 	worldserver.SendPacket(pack);
 	safe_delete(pack);
 }
+int16 QuestManager::CreateDoor(const char* model, float x, float y, float z, float heading, int8 opentype, int16 size)
+{
+	int16 entid = 0; //safety check
+	entid = entity_list.CreateDoor(model, x, y, z, heading, opentype, size);
+	return entid;
+}
