@@ -223,6 +223,7 @@ public:
 	void voicetell(char *str, int macronum, int racenum, int gendernum);
     void LearnRecipe(uint32 recipe_id);
     void SendMail(const char *to, const char *from, const char *subject, const char *message);
+	int16 CreateDoor( const char* model, float x, float y, float z, float heading, int8 opentype, int16 size);
 
 	//not in here because it retains perl types
 	//thing ChooseRandom(array_of_things)
